[package]
name = "tile"
version = "0.1.0"
edition = "2021"
description = """
  Tiling based Certificate Transparency logs
"""
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ericlagergren/tile"
keywords = [ "certificate", "transparency" ]
categories = [ "no-std" ]

[features]
default = []

# Enable libstd.
std = [
	"sha2/std",
	"sha3/std",
]

[dependencies]
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]
